# cas-offinder-rust

./: .gitignore  README.md
cas-offinder-cli/: Cargo.toml
cas-offinder-cli/src/: cli_utils.rs  main.rs
cas-offinder-cli/tests/: benchmark.py  compare_impls.py  example0.in
cas-offinder-core/: Cargo.toml
cas-offinder-core/src/: bit4ops.rs  chrom_chunk.rs  cli_err.rs  lib.rs  read_bit2.rs  read_fasta.rs  read_fasta_folder.rs
cas-offinder-lib/: Cargo.toml
cas-offinder-lib/src/: bit4ops.rs  chrom_chunk.rs  cli_err.rs  kernel.cl  lib.rs  ocl_kernel.rs  opencl_search.rs  read_2bit.rs  read_fasta.rs  read_fasta_folder.rs  run_config.rs  search.rs
cas-offinder-lib/tests/: file_test.rs
cas-offinder-lib/tests/test_data/: ref_input.in
